--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
 version: 1.0.{build}
 platform: x64
 image: Visual Studio 2015
+install:
+- git submodule update --init --recursive
 before_build:
 - cmake .
 build:
