use same vigra versions as in ilastik for bld

--- a/pkg/conda/fastfilters/meta.yaml
+++ b/pkg/conda/fastfilters/meta.yaml
@@ -24,7 +24,7 @@ requirements:
     - {{ compiler("c") }}
     - {{ compiler("cxx") }}
   host:
-    - python {{ python }}
+    - python
     - vigra {{ vigra }}
   run:
     - python
