add make to conda deps

--- a/pkg/conda/fastfilters/meta.yaml
+++ b/pkg/conda/fastfilters/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - cmake
     - {{ compiler("c") }}
     - {{ compiler("cxx") }}
+    - make  # [not win]
   host:
     - python
     - vigra {{ vigra }}
