--- a/pkg/conda/fastfilters/conda_build_config.yaml
+++ b/pkg/conda/fastfilters/conda_build_config.yaml
@@ -1,3 +1,7 @@
+MACOSX_DEPLOYMENT_TARGET:      # [osx]
+  - 11.0                       # [osx and arm64]
+  - 10.9                       # [osx and x86_64]
+
 python:
   - 3.8
   - 3.9
@@ -6,3 +10,17 @@ python:
 
 pin_run_as_build:
   python: x.x
+
+# clang 17 seems to have issues with this build
+# specifically cmake detecting std versions
+# fixing compiler to clang 16 for now (same as conda-forge atm)
+c_compiler:
+  - clang                      # [osx]
+c_compiler_version:            # [unix]
+  - 16                         # [osx]
+c_stdlib_version:              # [unix]
+  - 11.0                       # [osx and arm64]
+cxx_compiler:
+  - clangxx                    # [osx]
+cxx_compiler_version:          # [unix]
+  - 16                         # [osx]
