--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,29 +13,29 @@ jobs:
         os: [macos-latest, windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           submodules: true
-      - uses: conda-incubator/setup-miniconda@v2
+      - uses: conda-incubator/setup-miniconda@v3
         with:
           auto-update-conda: true
           auto-activate-base: true
           activate-environment: ""
           channel-priority: strict
-          miniforge-variant: Mambaforge
-          use-mamba: true
+          miniforge-version: latest
+          conda-solver: libmamba
       - name: install common dependencies
-        run: mamba install -n base -c conda-forge conda-build boa -y
+        run: mamba install -n base -c conda-forge conda-build -y
       - name: linux conda build
         if: matrix.os == 'ubuntu-latest'
         shell: bash -l {0}
-        run: conda mambabuild -c conda-forge pkg/conda
+        run: conda build -c conda-forge pkg/conda
       - name: osx conda build
         if: matrix.os == 'macos-latest'
         shell: bash -l {0}
-        run:  conda mambabuild -c conda-forge pkg/conda
+        run:  conda build -c conda-forge pkg/conda
       - name: windows conda build
         if: matrix.os == 'windows-latest'
         shell: cmd /C CALL {0}
-        run: conda mambabuild -c conda-forge pkg/conda
+        run: conda build -c conda-forge pkg/conda
