--- a/pkg/conda/fastfilters/conda_build_config.yaml
+++ b/pkg/conda/fastfilters/conda_build_config.yaml
@@ -3,7 +3,6 @@ MACOSX_DEPLOYMENT_TARGET:      # [osx]
   - 10.9                       # [osx and x86_64]
 
 python:
-  - 3.8
   - 3.9
   - 3.10
   - 3.11
@@ -17,10 +16,10 @@ pin_run_as_build:
 c_compiler:
   - clang                      # [osx]
 c_compiler_version:            # [unix]
-  - 16                         # [osx]
+  - 18                         # [osx]
 c_stdlib_version:              # [unix]
-  - 11.0                       # [osx and arm64]
+  - macosx_deployment_target   # [osx]
 cxx_compiler:
   - clangxx                    # [osx]
 cxx_compiler_version:          # [unix]
-  - 16                         # [osx]
+  - 18                         # [osx]
